--- a/css/style.css
+++ b/css/style.css
@@ -60,5 +60,37 @@ html, body {
   body {
     padding-top: 150px; /* Adjust this value according to the height of your navbar */
   }
-  
+  /* random user API */
+ 
+
+  .card {
+    background: none;
+    border: none;
+}
+
+.card .card-title {
+    color: #dd611e !important; /* Ensures this color is applied */
+    font-family: inherit !important; /* Ensures this font-family is applied */
+    text-transform: inherit !important; /* Ensures text-transform is applied */
+    text-align: center !important; /* Ensures text-align is applied */
+    font-size: 1.5rem !important; /* Adjust the font size as needed */
+    font-weight: normal !important; /* Ensures font-weight is applied */
+    padding-top: 1rem !important; /* Ensures padding-top is applied */
+}
+
+.card-img-top {
+    margin-top: 1rem; /* Space between text and image */
+}
+
+.text-container {
+    text-align: center; /* Ensure text is centered */
+    margin-bottom: 1rem; /* Space between text and image */
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
